--- a/home.html
+++ b/home.html
@@ -12,6 +12,14 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./assest/css/main.css" />
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.5/axios.min.js"
+      integrity="sha512-TjBzDQIDnc6pWyeM1bhMnDxtWH0QpOXMcVooglXrali/Tj7W569/wd4E8EDjk1CwOAOPSJon1VfcEt1BI4xIrA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script defer src="./assest/js/main.js"></script>
 
     <title>Document</title>
   </head>
@@ -143,7 +151,7 @@
             <h1>Choose the best color for your activity</h1>
           </div>
           <div class="cards">
-            <div class="card">
+            <!-- <div class="card" style="background-image: url(./assest/img/Group-8211-copy-2.jpg);" >
               <h5>WRIST BAND</h5>
               <h2>Mint Green</h2>
               <h3>$25.50</h3>
@@ -157,7 +165,7 @@
               <h5>WRIST BAND</h5>
               <h2>Mint Green</h2>
               <h3>$25.50</h3>
-            </div>
+            </div> -->
           </div>
           <button class="more">SEE MORE</button>
         </div>
