--- a/add.html
+++ b/add.html
@@ -46,34 +46,34 @@
       </div>
     </header>
     <section id="form-table">
-        <div class="container">
-            <div class="form-table">
-                <form >
-                    <input type="text" placeholder="NAME...">
-                    <input type="text" placeholder="DESCRIPTION...">
-                    <input type="text" placeholder="DETAILS...">
-                    <input type="number" placeholder="PRICE...">
-                    <input type="file" >
-                   <button class="submit" type="submit">SUBMIT</button>
-                </form>
-                <div class="search-sort">
-                    <input type="search" class="search">
-                    <button class="sort">ASC</button>
-                </div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Id</th>
-                            <th>Img</th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Price</th>
-                            <th></th>
-                            
-                        </tr>
-                    </thead> 
-                    <tbody> 
-                        <!-- <tr>
+      <div class="container">
+        <div class="form-table">
+          <form>
+            <input type="text" placeholder="NAME..." />
+            <input type="text" placeholder="DESCRIPTION..." />
+            <input type="text" placeholder="DETAILS..." />
+            <input type="number" placeholder="PRICE..." />
+            <input type="file" />
+            <button class="submit" type="submit">SUBMIT</button>
+          </form>
+
+          <div class="search-sort">
+            <input type="search" class="search" />
+            <button class="sort">ASC</button>
+          </div>
+          <table>
+            <thead>
+              <tr>
+                <th>Id</th>
+                <th>Img</th>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Price</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- <tr>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -81,10 +81,62 @@
                             <td></td>
                             <td></td>
                         </tr> -->
-                    </tbody>
-                </table>
-            </div>
+            </tbody>
+          </table>
         </div>
+      </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <div class="top">
+            <div class="left">
+              <img src="./assest/img/Jevelin_logo_light.png" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                diam.
+              </p>
+              <div class="image">
+                <i class="fa-brands fa-vimeo"></i>
+                <i class="fa-solid fa-money-bill"></i>
+                <i class="fa-brands fa-vimeo"></i>
+                <i class="fa-solid fa-money-bill"></i>
+                <i class="fa-brands fa-vimeo"></i>
+              </div>
+              <p>Secure online payment</p>
+            </div>
+            <div class="right">
+              <div class="box">
+                <h2>BEST EXPERIENCE</h2>
+                <nav>
+                  <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Shipment</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">Gift cards</a></li>
+                    <li><a href="#">Policies</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="box">
+                <h2>COMPANY</h2>
+                <nav>
+                  <ul>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Offices</a></li>
+                    <li><a href="#">Affiliates</a></li>
+                    <li><a href="#">Giveaway</a></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
+          <div class="bottom">
+            <p>Copyright © 2018 JevelinTheme - Theme by Shufflehound</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
